--- a/resources/styles/select-template/_select-template.scss
+++ b/resources/styles/select-template/_select-template.scss
@@ -21,7 +21,7 @@ div.select-template {
         margin-bottom: var(--rowSpace);
         .template-image{
             background: var(--bgFirstScreen) no-repeat center/cover;
-            background-image: url("https://i.kym-cdn.com/entries/icons/original/000/035/699/pepe.jpg");
+            background-image: url("https://petacy.com/wp-content/uploads/2020/10/Cho-shiba-inu-1068x560.jpg");
             padding-top: 34%;
         }
         .center-text{
@@ -54,7 +54,10 @@ div.select-template {
         div.overlay {
             transition: 0.3s;
             cursor: pointer;
-
+            background: rgba(0,0,0,.1);
+            &:hover{
+                background: rgba(0,0,0,.7) !important;
+            }
             button.select-button {
                 font-size: 16px;
                 visibility: hidden;
