--- a/resources/styles/shared/_overlay.scss
+++ b/resources/styles/shared/_overlay.scss
@@ -4,6 +4,7 @@
     position: absolute;
     color: white;
     font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.4);
 
     top: 50%;
     left: 50%;
